[project]
name = "slack-thread-nuker"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "google-cloud-datastore>=2.21.0",
    "httpx>=0.28.1",
    "pyright>=1.1.403",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "ruff>=0.12.9",
    "uvicorn>=0.35.0",
]
